--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
     <div class="main">
     <h1 id="Home">Hello, i'm <span class="ab"> Abayomi Ogunleye</span></h1>
     <h3>Web Developer <span class="ab">|</span> Graphics Designer</h3>
+    <div class="side">
+    <img src="assets/IMG_20250513_194955_252-removebg-preview.png" alt="Ogunleye Abayomi Portrait Picture">
     <h4>I am a Professional Web Developer and a Certified Graphics Designer.
+        <br>
         I am actively learning and I strive to create and build
         clean & responsible websites.
+        <br>
         I design and develop modern websites, create eyecatching graphics including flyers, idcards, and a lot more <span class="ab">...</span>
     </h4>
-    <img src="assets/IMG_20250513_194955_252-removebg-preview.png" alt="Ogunleye Abayomi Portrait Picture">
     </div>
-    <p>
-    <button>
-        <a href="https://www.linkedin.com/in/abayomi-ogunleye-295033354?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">More About Me</a>
-    </button>
-    </p>
     <div class="more">
         <div>
             <h3>2+</h3>
@@ -45,6 +43,12 @@
             <h3>5+</h3>
             <small>Customers Satisfied</small>
         </div>
+    </div>
+    <p>
+    <button>
+        <a href="https://www.linkedin.com/in/abayomi-ogunleye-295033354?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">More About Me</a>
+    </button>
+    </p>
     </div>
     </div>
     <div class="sk">
