Added an appreciation message to CJID and some animation to it

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     <h3>Web Developer <span class="ab">|</span> Graphics Designer</h3>
     <div class="side">
     <img src="assets/IMG_20250513_194955_252-removebg-preview.png" alt="Ogunleye Abayomi Portrait Picture">
-    <h4>I am a Professional Web Developer and a Certified Graphics Designer.
+    <h4>I am a <span class="ab">Professional Web Developer and a Certified Graphics Designer</span>. Passionate about building responsive,
+        visually appealing and user-friendly websites.
         <br>
-        I am actively learning and I strive to create and build
-        clean & responsible websites.
+        I create modern solutions through web development and design stunning graphics including flyers, ID cards,
+        and branding materials.
         <br>
-        I design and develop modern websites, create eyecatching graphics including flyers, idcards, and a lot more <span class="ab">...</span>
+        My goal is to help individuals and businesses to bring their ideas to life and solve real problems through 
+        design and  delivering high quality results
     </h4>
     </div>
     <div class="more">
@@ -111,6 +113,16 @@
                     </p>
                 </div>
             </form>
+        </div>
+        <div class="specialthanks">
+            <h4>Special Thanks to CJID  for this great opportunity to learn and also generously providing me
+                a laptop. this genoerosity has empowered me well enough to develop basisc Web Development skills
+                with ease, explore tools, and grow in the tech space. i am more than grateful for the experience
+                during the training and also for their investment in my growth and Future.
+            </h4>
+            <h2>
+                Once again, thank you <strong>CJID</strong>
+            </h2>
         </div>
     </div>
 </body>
