added hamburger menu to the portfolio

--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <script src="/js/script.js" defer></script>
 </head>
 <body>
+    <div class="off-screen-menu">
+        <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#project">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact_form">Contact Form</a></li>
+        </ul>
+            <a href="" class="cancel">Cancel Menu</a>
+    </div>
     <nav>
-    <div class="navbar">
-        <a href="#Home">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Projects</a>
-        <a href="#contact">Contact</a>
-        <a href="#contact_form">Contact Form</a>
+        <h2>OGUNLEYE ABAYOMI PORTFOLIO</h2>
+    <div class="navmenu">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
     </nav>
     <div class="main">
