updated the README.md file to meet with project requirements, added footer tag too.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="/js/script.js" defer></script>
 </head>
 <body>
+    <header>
     <div class="off-screen-menu">
         <ul>
             <li><a href="#Home">Home</a></li>
@@ -26,6 +27,8 @@
         <span></span>
     </div>
     </nav>
+    </header>
+    <main>
     <div class="main">
     <h1 id="Home">Hello, i'm <span class="ab"> Abayomi Ogunleye</span></h1>
     <h3>Web Developer <span class="ab">|</span> Graphics Designer</h3>
@@ -62,6 +65,7 @@
     </p>
     </div>
     </div>
+    </main>
     <div class="sk">
         <h2 id="about">
             Technical skills
@@ -134,5 +138,8 @@
             </h2>
         </div>
     </div>
+    <footer>
+        <p>&copy; Ogunleye Abayomi Portfolio. All right reserved.</p>
+    </footer>
 </body>
 </html>
